fix cal spacing

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,8 @@ nav ul li a:hover {
   width: 150px;
   height: 150px;
   /* padding: 20px; */
+  margin-top: 40px;
+  margin-bottom: 20px;
   border: none;
   /* border-radius: 10px; */
   cursor: pointer;
@@ -335,12 +337,6 @@ footer {
   .blog-card {
     padding: 1rem;
     margin-bottom: 1rem;
-  }
-
-  footer {
-    text-align: center;
-    padding: 10px 0;
-    background-color: rgba(0, 0, 0, 0.75);
   }
   
 }
